# RTSoft

tasks/my_examples/cv-detector-color/src/color-detector/: main  main.c  run.sh
tasks/my_examples/mog/: CMakeLists.txt  main
tasks/my_examples/opencv/samples/python/: find_obj.py
tasks/my_examples/python-hist/: col_coordinate.py  col_tr.py
tasks/my_examples2/: sift-example.py
tasks/test_drawings/: example_02-10.cpp
